# shoegaze2-desktop

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/shoegaze2/: CMakeLists.txt  nanovg.cmake
src/shoegaze2/Shoegaze2Desktop/Audio/PortAudio/: AudioDevice.cpp  AudioDevice.h  AudioSystem.cpp  AudioSystem.h
src/shoegaze2/Shoegaze2Desktop/GUI/: Brush.h  Canvas.cpp  Canvas.h  DisplayDevice.h  Image.cpp  Image.h  Paint.h  Path.h  RenderingContext.cpp  RenderingContext.h  UISystem.cpp  UISystem.h
src/shoegaze2/Shoegaze2Desktop/Input/: Mouse.cpp  Mouse.h
